#4 Remove -XX:MaxPermSize=128m
-XX:MaxPermSize=128m not required for tomcat8-java8 deploys